fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 
 body
 {
+  overflow-x:hidden ;
   background-color: #111010;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color:#fff;
